Responsive desing ready

--- a/index.html
+++ b/index.html
@@ -63,20 +63,21 @@
                 <img class="headLeftImg \" src="./ASSETS/MEDIA/oie_Vy5CWco9cw0B.png" alt="Soluciones Horizontales Bolivar logo con texto">
             </div>
             <div class="wellTitle">
-                <h1>BIENVENIDO A SU PORTAL DE PROPIEDAD HORIZONTAL <br>
+                <h1>
+                    BIENVENIDO A SU PORTAL DE PROPIEDAD HORIZONTAL <br>
                     BANCO GANADERO
                 </h1>
             </div>
-            <div class="wellImg">
+            <!-- <div class="wellImg">
                 <img src="./ASSETS/MEDIA/pexels-expect-best-351264.jpg" alt="banks picture">
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="services">
             <div class="localesDisp">
                 <a href="">
                     <button>
-                        localesDisp
+                        LOCALES
                     </button>
                 </a>
             </div>
