contact page altmost ready

--- a/CONTACT/contact.html
+++ b/CONTACT/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SH BOLIVAR - PROTOTYPE</title>
-    <link rel="stylesheet" type="text/css" class="certificationsLink" href="./proto.css">
+    <title>SH BOLIVAR - BANCO GANADERO - CONTACTO</title>
+    <link rel="stylesheet" type="text/css" class="certificationsLink" href="./contact.css">
     <link rel="shortcut icon" href="../ASSETS/MEDIA/oie_9k8BzK88fTWW.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,14 +25,7 @@
             </ul>
         </nav>
     </header>
-    <section class="presentationContainer">
-        <div class="presentationBackground">
-            <img src="../ASSETS/MEDIA/e84020c3-real-estate-.jpg" alt="">   
-        </div>
-        <!-- code here -->
         <section class="presentation">
-
-
             <!-- Slideshow container -->
             <div class="slideshow-container">
     
@@ -59,23 +52,62 @@
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-    
         </section>
-        <script src="proto.js"></script>
-    </section>
-    <section class="wellCont">
-        <div class="wellcome">
-            <div class="weLogo">
-                <img class="headLeftImg" src="../ASSETS/MEDIA/oie_Vy5CWco9cw0B.png" alt="Soluciones Horizontales Bolivar logo con texto">
+        <script src="contact.js"></script>
+        <section class="wellCont">
+            <div class="wellcome">
+                <div class="weLogo">
+                    <img class="headLeftImg" src="../ASSETS/MEDIA/oie_Vy5CWco9cw0B.png" alt="Soluciones Horizontales Bolivar logo con texto">
+                </div>
+                <div class="wellTitle">
+                    <h1>
+                        CONTACTANOS
+                    </h1>
+                </div>
             </div>
-            <div class="wellTitle">
-                <h1>
-                    BIENVENIDO A SU PORTAL DE PROPIEDAD HORIZONTAL <br>
-                    BANCO GANADERO
-                </h1>
-            </div>
-        </div>
+        </section>
+        <section class="presentationContainer">
+            <!-- <div class="presentationBackground">
+                <img src="../ASSETS/MEDIA/e84020c3-real-estate-.jpg" alt="">   
+            </div> -->
+            <section class="presentationContainer">
+                <div class="formContainer">
+                    <aside class="advantagesRightCont formContleftCont">
+                        <h1 class="fromContLefTitle">ESTAMOS<br/>DISPONIBLES</h1>
+                        <div class="advantagesRight 2">
+                            <div class="advImgCont"><img src="../ASSETS/SVG/mail-2569Black.svg" alt="mail icon" srcset=""></div>
+                            <div class="advContTxt">
+                                <div class="advRghtTitle"><h2 class="advantagesRightTitle">Correo Electronico</h2></div>    
+                                <div class="adiRghtDesc"><p class="AdvantagesRightDesc">Nuestra integridad que nos hace unicos</p></div>
+                            </div>
+                        </div>
+                        <div class="advantagesRight 3">
+                            <div class="advImgCont"><img src="../ASSETS/SVG/phone-504Black.svg" alt="phone icon" srcset=""></div>
+                            <div class="advContTxt">
+                                <div class="advRghtTitle"><h2 class="advantagesRightTitle">Llamenos</h2></div>    
+                                <div class="adiRghtDesc"><p class="AdvantagesRightDesc">(+57) 3203198784 </p></div>
+                            </div>
+                        </div>
+                        <div class="advantagesRight 4">
+                            <div class="advImgCont"><img src="../ASSETS/SVG/pin-48Black.svg" alt="map pin icon" srcset=""></div>
+                            <div class="advContTxt">
+                                <div class="advRghtTitle"><h2 class="advantagesRightTitle">Direccion</h2></div>    
+                                <div class="adiRghtDesc"><p class="AdvantagesRightDesc">CALLE 60 A SUR # 97B-78 BOGOTA </p></div>
+                            </div>
+                        </div>
+                    </aside>
+                    <aside class="formContrightCont">
+                        <div class="RContMsg">Envienos su mensaje</div>
+                        <div class="RContMsg">Nombre</div>
+                        <div class="RContMsg">Apellido</div>
+                        <div class="RContMsg">Correo</div>
+                        <div class="RContMsg">Mensaje</div>
+                        <div class="RContMsg">Enviar</div>
+                    </aside>
+                </div>
+            </section>  
     </section>
+
     <section class="directions">
         <div class="direcAddres">
             <img src="../ASSETS/SVG/pin-48(1).svg" alt="phone icon" srcset="">
